--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "start": "node server/server.js",
-    "heroku-postbuild": "yarn run build:prod"
+    "heroku-postbuild": "yarn run build:prod",
+    "test": "standard"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -40,6 +41,7 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.5.1"
+    "webpack-dev-server": "2.5.1",
+    "standard": "*"
   }
 }
