--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
+    "tachyons": "^4.10.0",
     "uuid": "3.1.0",
     "validator": "8.0.0",
     "webpack": "3.1.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.5.1",
-    "standard": "*"
+    "standard": "*",
+    "webpack-dev-server": "2.5.1"
   }
 }
