:heavy_plus_sign: added lodash, email-validator and libphonenumber

--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "email-validator": "^2.0.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.2",
+    "libphonenumber-js": "^1.2.15",
+    "lodash": "^4.17.10",
     "moment": "2.19.3",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
